imagem e posicionamento da div

--- a/js_aula/exercicio_condicao/exer01/index.html
+++ b/js_aula/exercicio_condicao/exer01/index.html
@@ -7,13 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <section>
-            <div>
+        <section class="caixa">
+            <div class="caixa_conteudo">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam temporibus nisi cumque atque necessitatibus dolores expedita, doloremque quae, sapiente exercitationem explicabo laudantium suscipit ducimus illum perspiciatis quaerat ab consequatur possimus?
                 
             </div>
         </section>
-    </main>
     <script src="index.js"></script>
 </body>
 </html>
