exercício de condição

--- a/js_aula/exercicio_condicao/exer01/index.html
+++ b/js_aula/exercicio_condicao/exer01/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>HORA DO DIA</title>
 </head>
-<body>
+<body onload="carregar()">
         <section class="caixa">
+            <div class="header">
+                <h1></h1>
+            </div>
             <div class="caixa_conteudo">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam temporibus nisi cumque atque necessitatibus dolores expedita, doloremque quae, sapiente exercitationem explicabo laudantium suscipit ducimus illum perspiciatis quaerat ab consequatur possimus?
-                
+                <div>
+                    <p class="caixa_texto"></p>
+                </div>
+                <div class="img">
+                    <img id="img" src="img/dia.jpg" alt="foto do dia">
+                </div>
             </div>
         </section>
     <script src="index.js"></script>
