--- a/js_aula/exercicio_repeticao/exer02/index.html
+++ b/js_aula/exercicio_repeticao/exer02/index.html
@@ -16,8 +16,8 @@
                  <p class="texto">Início:<input type="number" class="caixa_num" id="inicio"></p>
                  <p class="texto">Fim:<input type="number" class="caixa_num"  id="fim"></p>
                  <p class="texto">Passo:<input type="number" class="caixa_num" id="passo"></p>
-                 <p class="texto"></p>
-                <input type="submit" onclick=" contar()" class="caixa_num contar" value="Contar">
+                 <p class="texto" id="res"></p>
+                <input type="submit" onclick=" contar()" class="caixa_num caixa_contar" value="Contar">
            
             </div>
         </section>
