--- a/js_aula/exercicio_repeticao/exer01/index.html
+++ b/js_aula/exercicio_repeticao/exer01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>HORA DO DIA</title>
+    <title>Tabuada</title>
 </head>
 <body >
         <section class="caixa">
@@ -12,9 +12,9 @@
                 <h1></h1>
             </div>
             <div class="caixa_conteudo">
-                <div>
+                <div class="caixa_conteudo_flex">
                     <p class="caixa_texto">Número: <input id="caixa_numero" type="number"> </p>
-                    <input type="submit" onclick="gerarTabuada()" value="Calcular">
+                    <input type="submit" id="botao_tabuada" onclick="gerarTabuada()" value="Calcular">
                 </div>
                 <div id="res" >
                     
