--- a/js_aula/exercicio_repeticao/exer01/index.html
+++ b/js_aula/exercicio_repeticao/exer01/index.html
@@ -14,7 +14,7 @@
             <div class="caixa_conteudo">
                 <div class="caixa_conteudo_flex">
                     <p class="caixa_texto">Número: <input id="caixa_numero" type="number"> </p>
-                    <input type="submit" id="botao_tabuada" onclick="gerarTabuada()" value="Calcular">
+                    <input type="button" id="botao_tabuada" onclick="gerarTabuada()" value="Calcular">
                 </div>
                 <div id="res" >
                     
