--- a/js_aula/exercicio_function/exer01/index.html
+++ b/js_aula/exercicio_function/exer01/index.html
@@ -15,7 +15,8 @@
                 <p class="caixa_texto">Digite um número de 1 a 100</p>
                 <div class="caixa_conteudo_flex">
                     <p class="caixa_texto">Número: <input id="caixa_numero" type="number"> </p>
-                    <input type="button" id="botao_tabuada" onclick="adicionarNumero()" value="Adicionar">
+                    <input type="button" class="botao" onclick="adicionarNumero()" value="Adicionar">
+                    <input type="button"class="botao" id="botao_verifica" onclick="analisaNumero()" value="Verificar">
                 </div>
                 <div id="res" >
                     
