--- a/projeto_alura_n.s/index.html
+++ b/projeto_alura_n.s/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>JS Game</title>
 </head>
@@ -21,7 +20,7 @@
                     <h1></h1>
                     <p class="texto__paragrafo"></p>
                 </div>
-                <input type="number" id="numerochute" min="1" max="10" class="container__input">
+                <input type="number" id="chute" min="1" max="10" class="container__input">
                 <div class="chute container__botoes">
                     <button onclick="verificarChute()" class="container__botao">Chutar</button>
                     <button onclick="" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
@@ -34,7 +33,7 @@
 
 
 
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </body>
 
 </html>
