--- a/desafios_alura/logica_programacao/desafio_imc/index.html
+++ b/desafios_alura/logica_programacao/desafio_imc/index.html
@@ -9,28 +9,33 @@
 <body>
     <main>
         <section class="caixa_conteudo">
-            <div class="titulo">
-                <h1></h1>
+            <div>
+                <h1 class="titulo"></h1>
+                <p class="texto"></p>
             </div>
             <div class="informacao">
                 <div class="recebe_informacao">
                     <div class="input">
-                        <input type="number"  id="peso">
+                        <span class="alerta"></span>
+                        <input type="number" class="input_tamanho"  id="peso" placeholder="Quilos">
+                        <span>Peso (ex.: 69,2)</span>
                     </div>
                     <div class="input">
-                        <input type="number"  id="altura">
+                        <input type="number" class="input_tamanho"  id="altura" placeholder="Metros">
+                        <span>Altura (ex.: 1,70)</span>
                     </div>
                 </div>
                 <div class="botao_informacao">
                     <div class="botao_calcular">
-                        <button id="calcular" onclick="calcularPeso()">Calcular</button>
+                        <button id="calcular" class="botao" onclick="calcularPeso()">Calcular</button>
                     </div>
                     <div class="botao_limpar">
-                        <button id="limpar" onclick="limparcalculo()">Limpar</button>
+                        <button id="limpar" class="botao" onclick="limparcalculo()">Limpar</button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <script src="imc.js"></script>
 </body>
 </html>
