desafio calcular imc

--- a/desafios_alura/logica_programacao/desafio_imc/index.html
+++ b/desafios_alura/logica_programacao/desafio_imc/index.html
@@ -30,7 +30,7 @@
                         <button id="calcular" class="botao" onclick="calcularPeso()">Calcular</button>
                     </div>
                     <div class="botao_limpar">
-                        <button id="limpar" class="botao" onclick="limparcalculo()">Limpar</button>
+                        <button id="limpar" class="botao" onclick="limparCalculo()">Limpar</button>
                     </div>
                 </div>
             </div>
