sorteando números aleatórios

--- a/desafios_alura/logica_programacao/numero_sorteado/index.html
+++ b/desafios_alura/logica_programacao/numero_sorteado/index.html
@@ -39,8 +39,8 @@
                     <button onclick="reiniciar()" id="btn-reiniciar" class="container__botao-desabilitado" >Reiniciar</button>
                 </div>
 
-                <div class="container__texto" id="resultado">
-                    <label class="texto__paragrafo">Números sorteados:  nenhum até agora</label>
+                <div class="container__texto">
+                    <label  id="resultado" class="texto__paragrafo">Números sorteados:  nenhum até agora</label>
                 </div>
             </div>
 
